# mcp_omni_connect

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  build.sh  cli.py  client.py  config.json  docker-compose.yaml  main.py  new.py  new.txt  pyproject.toml  requirements.txt  run.py  tasks.txt  test.servers_config.json  text.txt  utils.py  weather.md
.github/workflows/: python-app.yml
examples/: azure.py  basic.py  fast_api_iml.py  index.html  ollama.py
qdrant_db/: raft_state.json
qdrant_db/collections/episodic_memory/0/: newest_clocks.json  replica_state.json
qdrant_db/collections/episodic_memory/0/segments/3e675aec-1482-4d45-af35-72c2fdf22803/: 000009.sst  000011.sst  000013.sst  000015.sst  000017.sst  000019.sst  000021.sst  000023.sst  000025.sst  000027.sst  000029.sst  000031.sst  000033.sst  000035.sst  000037.sst  000039.sst  000041.sst  000043.sst  000045.sst  000047.sst  000049.sst  000051.sst  000053.sst  000055.sst  000057.sst  000059.sst  000061.sst  000063.sst  000065.sst  000067.sst  000069.sst  000071.sst  000073.sst  000075.sst  000077.sst  000079.sst  000081.sst  000083.sst  000085.sst  000087.sst  (+34 more)
qdrant_db/collections/episodic_memory/0/segments/7cf2e206-e96f-477f-823e-a9628ee9eb81/: 000009.sst  000011.sst  000013.sst  000015.sst  000017.sst  000019.sst  000021.sst  000023.sst  000025.sst  000027.sst  000029.sst  000031.sst  000033.sst  000035.sst  000037.sst  000039.sst  000041.sst  000043.sst  000045.sst  000047.sst  000049.sst  000051.sst  000053.sst  000055.sst  000057.sst  000059.sst  000061.sst  000063.sst  000065.sst  000067.sst  000069.sst  000071.sst  000073.sst  000075.sst  000077.sst  000079.sst  000081.sst  000083.sst  000085.sst  000087.sst  (+32 more)
qdrant_db/collections/episodic_memory/0/segments/aba3cf83-74a1-43e5-a093-1fc8c5754a88/: 000009.sst  000011.sst  000013.sst  000015.sst  000017.sst  000019.sst  000021.sst  000023.sst  000025.sst  000027.sst  000029.sst  000031.sst  000033.sst  000035.sst  000037.sst  000039.sst  000041.sst  000043.sst  000045.sst  000047.sst  000049.sst  000051.sst  000053.sst  000055.sst  000057.sst  000059.sst  000061.sst  000063.sst  000065.sst  000067.sst  000069.sst  000071.sst  000073.sst  000075.sst  000077.sst  000079.sst  000081.sst  000083.sst  000085.sst  000087.sst  (+32 more)
qdrant_db/collections/episodic_memory/0/segments/cbdc2a29-6401-4b61-af19-41026005c310/: 000009.sst  000011.sst  000013.sst  000015.sst  000017.sst  000019.sst  000021.sst  000023.sst  000025.sst  000027.sst  000029.sst  000031.sst  000033.sst  000035.sst  000037.sst  000039.sst  000041.sst  000043.sst  000045.sst  000047.sst  000049.sst  000051.sst  000053.sst  000055.sst  (+48 more)
qdrant_db/collections/episodic_memory/0/wal/: first-index
src/: cli.py  client.py  main.py  utils.py
src/examples/: basic.py  fast_api_iml.py  index.html
src/mcpomni_connect/: cli.py  client.py  constants.py  episodic_memory.py  llm.py  llm_support.py  main.py  mcp_omni_agents.py  memory.py  memory_prompt.py  notifications.py  process_user_query.py  prompts.py  react_agent.py  refresh_server_capabilities.py  resources.py  sampling.py  schemas.py  system_prompts.py  telemetry.py  tool_calling_agent.py  tools.py  types.py  utils.py
src/mcpomni_connect/agents/: base.py  local_tools.py  orchestrator.py  react_agent.py  sequential_agents.py  token_usage.py  tool_calling_agent.py  types.py
src/mcpomni_connect/agents/tools/: local_tools_registry.py  tools_handler.py
tests/: test_base.py  test_client.py  test_llm.py  test_llm_support.py  test_main.py  test_memory.py  test_orchestrator_agent.py  test_process_user_query.py  test_prompts.py  test_react_agent.py  test_refresh_server_capabilities.py  test_resources.py  test_sampling.py  test_system_prompts.py  test_tool_calling_agent.py  test_tools.py
trip_april_2025/: road_trip_details.md  trip_details.md
(+12 files in other folders)
